validate input addTask; fix visibilty quicklinks at index

--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,7 @@ input {
     justify-content: center;
     align-items: center;
     z-index: 1;
+    overflow: hidden;
 }
 
 .slide-in {
